fix alignment

--- a/12bool.css
+++ b/12bool.css
@@ -29,7 +29,7 @@
 
 .row{
     display: flex;
-    flex-direction: flex;
+    flex-direction: row;
     flex-wrap: wrap;
 }
 
